--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -1,5 +1,5 @@
-telegram_token: ""
-openai_api_key: ""
+telegram_token: "6423953374:AAF-IBFrulIaA60Dwef-aR8seegRPrh5emc"
+openai_api_key: "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"
 openai_api_base: null  # leave null to use default api base or you can put your own base url here
 allowed_telegram_usernames: []  # if empty, the bot is available to anyone. pass a username string to allow it and/or user ids as positive integers and/or channel ids as negative integers
 new_dialog_timeout: 600  # new dialog starts after timeout (in seconds)
